Fix GenreLinks spacing

--- a/client/src/components/genreLinks/GenreLinks.module.css
+++ b/client/src/components/genreLinks/GenreLinks.module.css
@@ -6,6 +6,7 @@
     text-transform: uppercase;
     text-decoration: none;
     border-radius: 3px;
+    margin: .5em;
     transition: all .2s ease;
   }
 
